<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".SettingActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/primary"
        android:fontFamily="@font/dirty_headline"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/dirty_headline"
        android:gravity="center"
        android:text="@string/music"
        android:textColor="@color/primary"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <SeekBar
        android:id="@+id/setting_volume_seekbar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="236dp"
        android:layout_height="44dp"
        android:layout_margin="16dp"
        android:layout_marginEnd="10dp"
        android:background="@color/transparent"
        android:indeterminateDrawable="@color/transparent"
        android:indeterminateOnly="false"
        android:max="4"
        android:progress="4"
        android:progressBackgroundTint="@color/primary"
        android:progressTint="@color/primary"
        android:splitTrack="true"
        android:thumbTint="@color/primary"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/tv_setting_sound"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/dirty_headline"
        android:gravity="center"
        android:text="@string/sound"
        android:textColor="@color/primary"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/setting_sound_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/setting_sound_btn" />

    <ImageButton
        android:id="@+id/setting_sound_btn"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/custom_button"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/volume"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_volume_seekbar" />

    <TextView
        android:id="@+id/tv_setting_mode"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/dirty_headline"
        android:gravity="center"
        android:text="@string/mode"
        android:textColor="@color/primary"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/setting_mode_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/setting_mode_btn" />

    <ImageButton
        android:id="@+id/setting_mode_btn"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:background="@color/transparent"
        android:contentDescription="@string/todo"
        android:padding="10dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_sound_btn"
        app:srcCompat="@drawable/sun" />

    <TextView
        android:id="@+id/language"
        android:layout_width="130dp"
        android:layout_height="75dp"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/dirty_headline"
        android:gravity="center"
        android:text="@string/language"
        android:textColor="@color/primary"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/setting_spinner_dropdown_item"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/setting_spinner_dropdown_item" />

    <Spinner
        android:id="@+id/setting_spinner_dropdown_item"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_spinner"
        android:backgroundTint="@color/primary"
        android:padding="1dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_mode_btn" />

    <Button
        android:id="@+id/setting_save_btn"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="10dp"
        android:background="@color/primary"
        android:text="@string/save"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>