<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".GameHumanActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/primary"
        android:orientation="horizontal"
        android:weightSum="6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/mode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            android:background="@color/transparent"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/day_and_night" />

        <TextView
            android:id="@+id/header"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="4"
            android:fontFamily="@font/dirty_headline"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="50sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            android:background="@color/transparent"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/setting" />

    </LinearLayout>

    <!--image of the grid-->
    <ImageView
        android:id="@+id/ImageButton"
        android:layout_width="390dp"
        android:layout_height="430dp"
        android:paddingLeft="10dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/grid" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="420dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="140dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <!--images of the grid boxes-->
            <ImageButton
                android:id="@+id/block1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:backgroundTint="@color/transparent"
                android:padding="20sp"
                android:scaleType="fitXY"
                android:tag="0" />

            <ImageButton
                android:id="@+id/block2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:backgroundTint="@color/transparent"
                android:padding="20sp"
                android:scaleType="fitXY"
                android:tag="1" />

            <ImageButton
                android:id="@+id/block3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:backgroundTint="@color/transparent"
                android:padding="20sp"
                android:scaleType="fitXY"
                android:tag="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/block4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:backgroundTint="@color/transparent"
                android:padding="20sp"
                android:scaleType="fitXY"
                android:tag="3" />

            <ImageButton
                android:id="@+id/block5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:backgroundTint="@color/transparent"
                android:padding="20sp"
                android:scaleType="fitXY"
                android:tag="4" />

            <ImageButton
                android:id="@+id/block6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:backgroundTint="@color/transparent"
                android:padding="20sp"
                android:scaleType="fitXY"
                android:tag="5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/block7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:backgroundTint="@color/transparent"
                android:padding="20sp"
                android:scaleType="fitXY"
                android:tag="6" />

            <ImageButton
                android:id="@+id/block8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:backgroundTint="@color/transparent"
                android:padding="20sp"
                android:scaleType="fitXY"
                android:tag="7" />

            <ImageButton
                android:id="@+id/block9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:backgroundTint="@color/transparent"
                android:padding="20sp"
                android:scaleType="fitXY"
                android:tag="8" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/game_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button"
        android:backgroundTint="@color/red"
        android:padding="10dp"
        android:text="@string/reset"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ImageButton" />

    <Button
        android:id="@+id/game_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/custom_button"
        android:backgroundTint="@color/primary"
        android:padding="10dp"
        android:text="@string/show_score"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ImageButton" />

</androidx.constraintlayout.widget.ConstraintLayout>